docs: update readme and swagger
