# docs/swagger.yaml
@@ -78,6 +78,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/services.BlocksResponse'
+        "400":
+          description: Query parameter n is empty or invalid
       summary: Get latest N blocks (without txn hash)
       tags:
       - Block
@@ -96,6 +98,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/services.SingleBlockResponse'
+        "400":
+          description: Path parameter id is invalid
+        "404":
+          description: Block is not found in the DB
       summary: Get block information from a block number (with txn hash)
       tags:
       - Block
@@ -114,6 +120,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/services.TxnResponse'
+        "404":
+          description: Transaction is not found in the DB
       summary: Get transaction information from a transaction hash
       tags:
       - Transaction
